modificacion interfaz principal, comentarios

--- a/co.edu.uniquindio.parkingsoft.ui/.ui/Principal.ui
+++ b/co.edu.uniquindio.parkingsoft.ui/.ui/Principal.ui
@@ -633,7 +633,7 @@ border-radius: 5px;
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="text">
-        <string>Consultar</string>
+        <string>Prediccion</string>
        </property>
        <property name="icon">
         <iconset>
